2009-07-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/package.rb:  Remove dangling digest require.  Reported
	  by Jeremy Kemper.

# -*- coding: utf-8 -*-

2009-06-25  Eric Hodel  <drbrain@segment7.net>

	* release_notes/:  Merged into History.txt for Hoe.
	* lib/rubygems/commands/setup_command.rb:  Streamlined install text.

2009-06-23  Eric Hodel  <drbrain@segment7.net>

	* release_notes/rel_1_3_5.rdoc:  RubyGems 1.3.5 release notes.
	* lib/rubygems/builder.rb:  Only print out with verbose.
	* lib/rubygems/package_task.rb:  Only print out with -t.

2009-06-12  Ryan Davis  <ryand@zenspider.com>

	* Rakefile:  Switched to Hoe.

2009-06-10  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/installer.rb:  --user-install is no longer enabled by
	  default.
	* lib/rubygems/source_index.rb:  Fix use of prerelease gems.

2009-06-04  Eric Hodel  <drbrain@segment7.net>

	* util/gem_prelude.rb.template:  Backports from 1.9.

2009-06-03  Eric Hodel  <drbrain@segment7.net>

	* bin/gem:  Support 1.8.6+
	* lib/rubygems/digest*:  Removed, support dropped for Ruby < 1.8.6
	* lib/rubygems/installer.rb:  Support env(1) in wrong path, use
	  /bin/sh if shebang has options.  By Nobu, ruby trunk r22853.
	* lib/rubygems/config_file.rb:  Switch to stdcall for appdata folder.
	  [ruby-core:22601].
	* lib/rubygems.rb:  Use only File::expand_path on 1.9 for home dir.
	  Don't recklessly create directories.  Simplify RbConfig::datadir
	  definition.

2009-05-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/which_command.rb:  Only print out directory
	  information to a TTY.
	* lib/rubygems/rubygems_version.rb:  1.3.4.
	* doc/release_notes/rel_1_3_4.rdoc:  RubyGems 1.3.4 release notes.

2009-05-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Fix --format-executable
	  option name.
	* lib/rubygems/requirement.rb:  Fix typo in #parse.  Bug #26000 by
	  Mike Gunderloy.

2009-05-21  Eric Hodel  <drbrain@segment7.net>
